updating variables example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ DATABASE_USER=root
 DATABASE_PASSWORD=root
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3320
-DATABASE_NAME=go_course_web
+DATABASE_NAME=keep-notes
 DATABASE_DEBUG=false
-DATABASE_MIGRATE=true
+DATABASE_MIGRATE=false
 PAGINATOR_LIMIT_DEFAULT=15
