fixing env variable

--- a/.ebextensions/env.config
+++ b/.ebextensions/env.config
@@ -1,19 +1,9 @@
-option_settings:
-  - option_name: DATABASE_USER
-    value: "root"
-    - option_name: DATABASE_PASSWORD
-    value: "Tuz166680"
-    - option_name: DATABASE_HOST
-    value: "keep-notes.clxpwucwcovw.us-east-2.rds.amazonaws.com"
-    - option_name: DATABASE_PORT
-    value: "3306"
-    - option_name: DATABASE_NAME
-    value: "keep-notes"
-    - option_name: DATABASE_DEBUG
-    value: "false"
-    - option_name: DATABASE_MIGRATE
-    value: "false"
-    - option_name: PAGINATOR_LIMIT_DEFAULT
-    value: "15"
-    - option_name: PORT
-    value: "8000"
+DATABASE_USER=root
+DATABASE_PASSWORD=Tuz166680
+DATABASE_HOST=keep-notes.clxpwucwcovw.us-east-2.rds.amazonaws.com
+DATABASE_PORT=3306
+DATABASE_NAME=keep-notes
+DATABASE_DEBUG=false
+DATABASE_MIGRATE=false
+PAGINATOR_LIMIT_DEFAULT=15
+PORT=8000
