configuring docker file
changing the database name

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ DATABASE_USER=root
 DATABASE_PASSWORD=root
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=3320
-DATABASE_NAME=keep-notes
+DATABASE_NAME=keep_note_database
 DATABASE_DEBUG=false
-DATABASE_MIGRATE=false
+DATABASE_MIGRATE=true
 PAGINATOR_LIMIT_DEFAULT=15
+PORT=8000
